RESOLVED FIXED220743
REGRESSION (r271559): [BigSur] fast/forms/password-scrolled-after-caps-lock-toggled.html is consistently failing
https://bugs.webkit.org/show_bug.cgi?id=220743
Summary REGRESSION (r271559): [BigSur] fast/forms/password-scrolled-after-caps-lock-t...
Ryan Haddad
Reported 2021-01-19 12:52:03 PST
After https://trac.webkit.org/changeset/271559/webkit landed, fast/forms/password-scrolled-after-caps-lock-toggled.html is consistently failing on Big Sur bots: --- /Volumes/Data/slave/bigsur-release-tests-wk2/build/layout-test-results/fast/forms/password-scrolled-after-caps-lock-toggled-expected.txt +++ /Volumes/Data/slave/bigsur-release-tests-wk2/build/layout-test-results/fast/forms/password-scrolled-after-caps-lock-toggled-actual.txt @@ -25,7 +25,7 @@ PASS document.getElementById('input').scrollLeft is 0 After caps lock enabled: -PASS document.getElementById('input').scrollLeft is 0 +FAIL document.getElementById('input').scrollLeft should be 0. Was 5. After caps lock disabled: PASS document.getElementById('input').scrollLeft is 0 @@ -39,6 +39,7 @@ After caps lock disabled: PASS document.getElementById('input').scrollLeft is 0 PASS successfullyParsed is true +Some tests failed. TEST COMPLETE https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Fpassword-scrolled-after-caps-lock-toggled.html
Attachments
Patch (2.38 KB, patch)
2021-01-21 04:37 PST, Nikolas Zimmermann
no flags
Patch (2.88 KB, patch)
2021-01-21 15:36 PST, Nikolas Zimmermann
no flags
Radar WebKit Bug Importer
Comment 1 2021-01-19 12:52:15 PST
Ryan Haddad
Comment 2 2021-01-20 14:05:03 PST
I'll go ahead and revert this change since we have a confirmed regression point.
Ryan Haddad
Comment 3 2021-01-20 14:09:54 PST
(In reply to Ryan Haddad from comment #2) > I'll go ahead and revert this change since we have a confirmed regression > point. https://trac.webkit.org/changeset/271598/webkit would also need to go, so maybe this needs a look sooner rather than later.
Simon Fraser (smfr)
Comment 4 2021-01-20 14:12:04 PST
Rollouts will cause a lot of churn with these big patches, and Nikolas will look at this soon, so I'd prefer to hold off on the rollout.
Nikolas Zimmermann
Comment 5 2021-01-20 14:16:07 PST
Regression confirmed, will look into it right now.
Nikolas Zimmermann
Comment 6 2021-01-21 04:37:28 PST
Nikolas Zimmermann
Comment 7 2021-01-21 05:08:58 PST
While this fixes the regression on the fast/forms/password-...* text, it has side effects for two other test categories, that I'm investigating. I'm on it - stay tuned.
Simon Fraser (smfr)
Comment 8 2021-01-21 10:48:54 PST
I'm sure it's obvious, but you just need to match the behavior from before the RenderLayer split.
Nikolas Zimmermann
Comment 9 2021-01-21 15:36:42 PST
EWS
Comment 10 2021-01-21 19:09:33 PST
Committed r271732: <https://trac.webkit.org/changeset/271732> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418094 [details].
Note You need to log in before you can comment on or make changes to this bug.