REGRESSION (r271559): [BigSur] fast/forms/password-scrolled-after-caps-lock-toggled.html is consistently failing https://bugs.webkit.org/show_bug.cgi?id=220743

Patch by Nikolas Zimmermann <nzimmermann@igalia.com> on 2021-01-21
Reviewed by Simon Fraser.

Create RenderLayerScrollableArea objects for layers that establish
overflow clipping (overflow: hidden). It is unfortunate that this is
necessary and could be optimized in the future.

Covered by fast/forms/password-scrolled-after-caps-lock-toggled.html.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::requiresLayerWithScrollableArea const): Layers
that establish overflow clipping (overflow: hidden) need to create
RenderLayerScrollableArea.
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scroll): Avoid unnecessary creation of
RenderLayerScrollableArea. Calling scroll() should early return here
instead of returning false from RenderLayerScrollableArea::scroll().

Canonical link: https://commits.webkit.org/233239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271732 268f45cc-cd09-0410-ab3c-d52691b4dbfc